# niddeaw_bmt

./: .gitignore  .impeccable.md  ISSUE_beerminton_webapp.md  README.md  wrangler.jsonc
.agents/: active.md
.agents/index/: repo-tree.md
.agents/topics/: service-overview.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  db_utils.py  deps.py  main.py  security.py  supabase_client.py
backend/app/models/: admin.py  billing.py  checkin.py  club_settings.py  match.py  matchmaking.py  player.py  session.py
backend/app/routers/admin/: auth.py  billing.py  checkins.py  matchmaking.py  players_admin.py  sessions.py  settings.py
backend/app/routers/public/: hall_of_fame.py  live.py  matches.py  players.py  ranking.py
backend/app/services/: billing_service.py  elo_service.py  matchmaking_service.py  promptpay_service.py  queue_service.py  revenue_service.py  stats_service.py
backend/tests/: test_billing_service.py  test_elo_service.py  test_matchmaking_service.py  test_promptpay_service.py  test_revenue_service.py  test_security.py  test_stats_service.py
db/migrations/: 0001_init_schema.sql  0002_indexes_constraints.sql  0003_club_settings_seed.sql  0004_rls_policies.sql  0005_storage_bucket.sql  0006_per_game_billing.sql  0007_whisky_tier.sql  0008_member_profile_fields.sql  0009_drop_name_phone.sql  0010_wine_tier.sql  0011_denormalize_player_stats.sql  0012_locked_pairs.sql
db/seed/: seed_dev.sql
deploy/: ENV_SETUP.md  render.yaml
frontend/: index.html  package-lock.json  package.json  pwa-assets.config.ts  vite.config.ts
(+49 files in other folders)
